# baku-mod-gallery

./: .gitignore  Shuttle.toml
.github/workflows/: main.yml  server.yml
backend/: Cargo.toml
backend/src/: dao.rs  errors.rs  jwt_auth.rs  main.rs  posts.rs  router.rs  sync_job.rs  sync_post.rs  test_util.rs  util.rs
backend/src/redis_pubsub/: message.rs  mod.rs  pubsub.rs
backend/src/test_data/: import.sh  posts.json
frontend/: gatsby-config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: actions.ts  layout.tsx  loading.tsx  page.module.css  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/components/: HeaderComponenet.tsx  ImagesModal.tsx  PostCard.tsx  PostModal.tsx  PostTable.tsx  PostsFeed.tsx  Provider.tsx  QuillTextEditor.tsx  SigninButton.tsx  Topbar.tsx
frontend/src/app/kkk/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/posts/: route.ts
frontend/src/app/posts/[id]/: route.ts
frontend/src/app/posts/detail/[id]/: page.tsx
frontend/src/app/testest/: page.tsx
frontend/src/app/util/: auth.ts  jwt.ts
frontend/types/: global.d.ts  next-auth.d.ts
