[package]
name = "my-mod-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
mongodb = "2.8.0"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-shared-db = { version = "0.36.0", features = ["mongodb"] }
tokio = "1.28.2"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
shuttle-secrets = "0.36.0"
futures = "0.3"

[dev-dependencies]
axum-test = "14.2.2"
run_script = "0.10.1"
serde_json = "1.0.111"
test-env-helpers = "0.2.2"
testcontainers = "0.15.0"
