[package]
name = "my-mod-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4"] }
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["mongodb"] }
tokio = "1.28.2"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
jsonwebtoken = "9.2.0"
tower-http = { version = "0.5.1", features = ["cors"] }
reqwest = { version = "0.11.24", features = ["json"]}
serde_json = "1.0.111"
chrono = "0.4.34"
anyhow = "1.0.80"
redis = { version = "0.25.2", features = ["tokio-native-tls-comp"] }

[dev-dependencies]
axum-test = "14.2.2"
run_script = "0.10.1"
serde_json = "1.0.111"
test-env-helpers = "0.2.2"
#testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.6", features = ["redis"] }